# Eclipse

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  configure.ac  tags
common/: .mrr.hh.swp  mrr.hh  order.cc  order.hh
doc/: eclipse.json  eclipsefs.1
doc/proposal/: proposal.aux  proposal.blg  proposal.dvi
doc/report/: .~lock.final report.docx#  report.aux  report.blg  report.dvi  report_reference.tex
doc/sc2013/: architecture.tex  poster.aux  poster.blg  poster.dvi
doc/sc2013/RCS/: Makefile,v  abstract.tex,v  architecture.tex,v  casestudy.tex,v  conclusion.tex,v  experiments.tex,v  graphic1.eps,v  intro.tex,v  poster.tex,v
lib/: Makefile
lib/unittest++/: AssertException.d  Checks.d  CurrentTest.d  DeferredTestReporter.d  DeferredTestResult.d  Makefile  MemoryOutStream.d  ReportAssert.d  Test.d  TestDetails.d  TestList.d  TestReporter.d  TestReporterStdout.cpp  TestReporterStdout.d  TestResults.d  TestRunner.d  TimeConstraint.d  XmlTestReporter.d
lib/unittest++/Posix/: SignalTranslator.d  TimeHelpers.d
m4/: ECLIPSE_FIND_BOOST.m4
src/: Makefile  _Makefile_legacy  clear_mr.sh  collectl.sh  countline.sh  display_my_effort.sh  garbage.txt  killall.sh  killslaves.sh  log.txt  nodelist.conf  run.sh  setup.conf  setup.json  setup.yaml  tags  test.master  tmp.txt
src/DHT/: DHTclient.cc  DHTclient.hh  DHTmacros.h  DHTserver.cc  DHTserver.hh
src/DHT/test/: DHTclient_test.cc  DHTserver_test.cc  Makefile  all_test  client.cc  int_test  int_test_client  integration.cc  main_client.cc  main_integration.cc  server.cc
src/cache/: SETcache.cc  SETcache.hh  cache.cc  cache.hh
src/cache/test/: %1  Makefile  all_test  cache_test.cc  out
src/cache_new/: application.cc  application.hh  async_messages.cc  async_pool.cc  async_pool.hh  cache.cc  cache.hh  cache_slave.cc  cache_slave.hh  cache_vector.cc  cache_vector.hh  iasync_messages.hh  main.cc  master.cc  master.hh  node.cc  node.hh  peer.cc  peer.hh
src/cache_server/: cacheserver.cc
src/cache_slave/: cache.cc  cache.hh  cache_slave.cc  cache_slave.hh  file_connclient.cc  file_connclient.hh  filebridge.cc  filebridge.hh  filepeer.cc  filepeer.hh  fileserver.hh  idistributor.cc  idistributor.hh  ireader.cc  ireader.hh  iwriter.cc  iwriter.hh  writecount.cc  writecount.hh
src/cacheserver/: cache.hh  cacheserver.cc  histogram.hh
src/client/: Makefile  client.cc  client.hh
src/client/dht/: Makefile  client.cc  client.hh
src/common/: EWMA.hh  Makefile  a.out  datablock.cc  datablock.hh  dataentry.cc  dataentry.hh  ecfs.hh  exception.hh  file_connclient.cc  file_connclient.hh  fileclient.cc  fileclient.hh  fileserver.hh  hash.cc  hash.hh  histogram.cc  histogram.hh  logger.cc  logger.hh  macros.h  mapreduce.cc  mapreduce.hh  messagebuffer.cc  messagebuffer.hh  metadata.hh  msgaggregator.cc  msgaggregator.hh  packet.hh  setting.hh  settings.cc  settings.hh  setup.hh  simring.hh  task.hh  test.cc  util.cc  utils.cc  utils.hh
src/common/test/: Makefile  all_test  file_test.cc  logger_test.cc  metadata_test.cc  packet_test.cc
src/deprecated/: a.out  dht.cc  dht_test.cc  em_kde.cc  multimap.cc  node.cc  node.hh  packetfactory.cc  query.cc
src/deprecated/common/: mrr.hh
src/deprecated/master/: address_book.cc  address_book.hh  address_book_page.cc  master.cc  node_client.hh  scheduler.cc
src/file_distributor/: Makefile  fd_core.cc  file_connclient.hh  filebridge.hh  filepeer.hh  fileserver.cc  fileserver.hh  fileserver.hh.back  idistributor.hh  ireader.hh  iwriter.hh  launcher.cc  messagebuffer.hh  mrcat_core.cc  mrrm_core.cc  writecount.hh
src/fs/: client.in  ecfs  ecfs.in  eclipse-debug.in  eclipsed.in  mapreduce.rb  slave.rb
src/mapreduce/: .definitions.hh.swp  .mapreduce.hh.swp  definitions.hh  mapreduce.hh  mapreduce_hdfs.hh  maptask.hh
src/mapreduce/dht/: mapreduce.hh  mapreduce.hh.bsnam  mapreduce.hh.put_bug  mapreduce.hh.singlethread
src/mapreduce/hdfs/: mapreduce.hh
src/mapreduce/hdfs_hh/: mapreduce.hh
src/mapreduce/nfs/: mapreduce.hh
src/mapreduce/nfs_hh/: mapreduce.hh
src/master/: Makefile  address_book.hh  address_book_page.cc  address_book_page.hh  cacheclient.hh  connclient.hh  connslave.hh  dec_connclient.hh  hostfile  master.cc  master.hh  master_job.hh  master_task.hh  scheduler.cc  scheduler.hh  test
src/master_new/: client.hh  master.cc  master.hh  node.hh  slave.hh
src/mcc/: Makefile  mcc.cc  mcc_hdfs.cc  mcc_hdfs.hh  mcc_nfs.cc
src/orthrus/: Makefile  cache.hh  cache_new.hh  cacheclient.hh  cacheserver.cc  datablock.hh  dataentry.hh  diskpage.hh  histogram.hh  iwfrequest.hh  launcher.cc  local_cache.cc  local_cache.hh  orthrus.cc  orthrus.hh  orthrus.hh.back  packets.hh
src/sample/: eclipse.json
src/slave/: Makefile  back.dht.hh  main.cc  node.cc  slave.cc  slave.hh  slave_job.cc  slave_job.hh  slave_task.cc  slave_task.hh
src_mr/: .setup.conf.swp  Makefile  countline.sh  run.sh  setup.conf  setup.conf.orig
src_mr/client/: .client.cc.swp  Makefile  client.cc  client.cc.orig
src_mr/mapreduce/: .mapreduce.hh.swp  definitions.hh  definitions.hh.orig  job.hh  job.hh.orig  mapreduce.hh  mapreduce.hh.orig  reducetask.hh  task.hh
src_mr/master/: .master.cc.swp  Makefile  connclient.hh  connslave.hh  dec_connclient.hh  master.cc  master.cc.orig  master.hh  master_task.hh
src_mr/mcc/: mcc.cc
src_mr/slave/: .slave.cc.swp  Makefile  slave.cc  slave.hh
src_sr/: Makefile
src_sr/common/: .packets.hh.swp  EWMA.hh  Makefile  SETcache.cc  SETcache.hh  dht.cc  file.hh  logger.hh  macros.h  order.hh  packet.hh  packetfactory.hh  packets.hh  simring.hh  utils.cc  utils.hh
src_sr/deprecated/: order.cc  order.hh
src_sr/master/: .address_book.cc.swp  .address_book.hh.swp  .address_book_page.cc.swp  .address_book_page.hh.swp  .master.cc.swp  .master.hh.swp  Makefile  address_book.cc  address_book.hh  address_book_page.cc  address_book_page.hh  master.cc  master.hh  node_client.hh  scheduler
src_sr/slave/: Makefile  main.cc  node  node.hh  node_sketch.cc
tests/: Makefile  Makefile.am  integration.in  settings_tests.cc
(+48 files in other folders)
